testsuite/tests/parser/should_fail/patFail006.hs
module PatFail006 where

f (-(1)) = _
